Fix jobs execution (#1161)